--- a/Classes/LinphoneUI/en.lproj/UICallBar.xib
+++ b/Classes/LinphoneUI/en.lproj/UICallBar.xib
@@ -479,7 +479,7 @@
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
                             <state key="disabled" image="dialer_alt_disabled.png"/>
-                            <state key="selected" image="dialer_alt_back_default.png"/>
+                            <state key="selected" backgroundImage="back_default.png"/>
                             <state key="highlighted" image="dialer_alt_over.png"/>
                             <connections>
                                 <action selector="onPadClick:" destination="-1" eventType="touchUpInside" id="46"/>
@@ -620,7 +620,7 @@
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 </view>
-                <view tag="33" contentMode="scaleToFill" id="186" userLabel="routesView">
+                <view hidden="YES" tag="33" contentMode="scaleToFill" id="186" userLabel="routesView">
                     <rect key="frame" x="285" y="85" width="65" height="170"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <subviews>
@@ -681,7 +681,7 @@
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 </view>
-                <view tag="15" contentMode="scaleToFill" id="101" userLabel="optionsView">
+                <view hidden="YES" tag="15" contentMode="scaleToFill" id="101" userLabel="optionsView">
                     <rect key="frame" x="415" y="140" width="65" height="105"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <subviews>
@@ -734,6 +734,10 @@
                     <rect key="frame" x="0.0" y="238" width="480" height="82"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <subviews>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="incall_background.png" id="pXB-4h-hkp">
+                            <rect key="frame" x="0.0" y="13" width="480" height="70"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
+                        </imageView>
                         <imageView userInteractionEnabled="NO" tag="100" contentMode="scaleToFill" image="callbar_left_padding.png" id="143" userLabel="leftPadding">
                             <rect key="frame" x="-44" y="-8" width="44" height="90"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -747,7 +751,7 @@
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             <color key="backgroundColor" red="0.14901960780000001" green="0.1647058824" blue="0.18039215689999999" alpha="1" colorSpace="calibratedRGB"/>
                         </view>
-                        <button opaque="NO" tag="19" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" adjustsImageWhenDisabled="NO" lineBreakMode="middleTruncation" id="113" userLabel="videoButton" customClass="UIVideoButton">
+                        <button hidden="YES" opaque="NO" tag="19" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" adjustsImageWhenDisabled="NO" lineBreakMode="middleTruncation" id="113" userLabel="videoButton" customClass="UIVideoButton">
                             <rect key="frame" x="65" y="0.0" width="65" height="82"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <accessibility key="accessibilityConfiguration" label=""/>
@@ -774,7 +778,7 @@
                             <rect key="frame" x="79" y="20" width="37" height="37"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         </activityIndicatorView>
-                        <button opaque="NO" tag="21" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" adjustsImageWhenDisabled="NO" lineBreakMode="middleTruncation" id="112" userLabel="microButton" customClass="UIMicroButton">
+                        <button hidden="YES" opaque="NO" tag="21" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" adjustsImageWhenDisabled="NO" lineBreakMode="middleTruncation" id="112" userLabel="microButton" customClass="UIMicroButton">
                             <rect key="frame" x="130" y="0.0" width="65" height="82"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <accessibility key="accessibilityConfiguration" label=""/>
@@ -794,7 +798,7 @@
                                 <color key="titleColor" red="0.81176470590000005" green="0.29803921570000003" blue="0.16078431369999999" alpha="1" colorSpace="deviceRGB"/>
                             </state>
                         </button>
-                        <button opaque="NO" tag="22" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" adjustsImageWhenDisabled="NO" lineBreakMode="middleTruncation" id="111" userLabel="speakerButton" customClass="UISpeakerButton">
+                        <button hidden="YES" opaque="NO" tag="22" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" adjustsImageWhenDisabled="NO" lineBreakMode="middleTruncation" id="111" userLabel="speakerButton" customClass="UISpeakerButton">
                             <rect key="frame" x="285" y="0.0" width="65" height="82"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <accessibility key="accessibilityConfiguration" label=""/>
@@ -814,7 +818,7 @@
                                 <color key="titleColor" red="0.81176470590000005" green="0.29803921570000003" blue="0.16078431369999999" alpha="1" colorSpace="deviceRGB"/>
                             </state>
                         </button>
-                        <button opaque="NO" tag="29" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" adjustsImageWhenDisabled="NO" lineBreakMode="middleTruncation" id="183" userLabel="routesButton" customClass="UIToggleButton">
+                        <button hidden="YES" opaque="NO" tag="29" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" adjustsImageWhenDisabled="NO" lineBreakMode="middleTruncation" id="183" userLabel="routesButton" customClass="UIToggleButton">
                             <rect key="frame" x="285" y="0.0" width="65" height="82"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <accessibility key="accessibilityConfiguration" label=""/>
@@ -834,7 +838,7 @@
                                 <color key="titleColor" red="0.81176470590000005" green="0.29803921570000003" blue="0.16078431369999999" alpha="1" colorSpace="deviceRGB"/>
                             </state>
                         </button>
-                        <button opaque="NO" tag="23" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" adjustsImageWhenDisabled="NO" lineBreakMode="middleTruncation" id="110" userLabel="optionsButton" customClass="UIToggleButton">
+                        <button hidden="YES" opaque="NO" tag="23" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" adjustsImageWhenDisabled="NO" lineBreakMode="middleTruncation" id="110" userLabel="optionsButton" customClass="UIToggleButton">
                             <rect key="frame" x="350" y="0.0" width="65" height="82"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <accessibility key="accessibilityConfiguration" label=""/>
@@ -857,7 +861,7 @@
                                 <action selector="onOptionsClick:" destination="-1" eventType="touchUpInside" id="134"/>
                             </connections>
                         </button>
-                        <button opaque="NO" tag="24" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" adjustsImageWhenDisabled="NO" lineBreakMode="middleTruncation" id="109" userLabel="pauseButton" customClass="UIPauseButton">
+                        <button hidden="YES" opaque="NO" tag="24" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" adjustsImageWhenDisabled="NO" lineBreakMode="middleTruncation" id="109" userLabel="pauseButton" customClass="UIPauseButton">
                             <rect key="frame" x="0.0" y="0.0" width="65" height="82"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinY="YES"/>
                             <accessibility key="accessibilityConfiguration" label=""/>
@@ -882,26 +886,26 @@
                             </connections>
                         </button>
                         <button opaque="NO" tag="26" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" adjustsImageWhenDisabled="NO" lineBreakMode="middleTruncation" id="107" userLabel="hangupButton" customClass="UIHangUpButton">
-                            <rect key="frame" x="195" y="0.0" width="90" height="82"/>
+                            <rect key="frame" x="124" y="14" width="111" height="66"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinY="YES"/>
                             <accessibility key="accessibilityConfiguration" label=""/>
                             <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                            <state key="normal" image="hangup_default_landscape.png">
+                            <state key="normal" image="hangup_default.png">
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
-                            <state key="highlighted" image="hangup_over_landscape.png"/>
+                            <state key="highlighted" image="hangup_over.png"/>
                         </button>
                         <button opaque="NO" tag="27" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" adjustsImageWhenDisabled="NO" lineBreakMode="middleTruncation" id="106" userLabel="dialerButton" customClass="UIToggleButton">
-                            <rect key="frame" x="415" y="0.0" width="65" height="82"/>
+                            <rect key="frame" x="236" y="14" width="111" height="66"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinY="YES"/>
                             <accessibility key="accessibilityConfiguration" label=""/>
                             <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                            <state key="normal" image="dialer_alt_default_landscape.png">
+                            <state key="normal" image="dialer_alt_default.png">
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
                             <state key="disabled" image="dialer_alt_default_landscape.png"/>
-                            <state key="selected" image="dialer_alt_back_default_landscape.png"/>
-                            <state key="highlighted" image="dialer_alt_over_landscape.png"/>
+                            <state key="selected" image="back_default.png"/>
+                            <state key="highlighted" image="dialer_alt_over.png"/>
                             <connections>
                                 <action selector="onPadClick:" destination="-1" eventType="touchUpInside" id="132"/>
                             </connections>
@@ -915,24 +919,20 @@
         </view>
     </objects>
     <resources>
+        <image name="back_default.png" width="213" height="138"/>
         <image name="callbar_left_padding.png" width="88" height="180"/>
         <image name="callbar_right_padding.png" width="88" height="180"/>
         <image name="conference_default.png" width="209" height="136"/>
         <image name="conference_default_landscape.png" width="130" height="163"/>
         <image name="conference_over.png" width="209" height="136"/>
         <image name="conference_over_landscape.png" width="130" height="163"/>
-        <image name="dialer_alt_back_default.png" width="209" height="136"/>
-        <image name="dialer_alt_back_default_landscape.png" width="130" height="163"/>
         <image name="dialer_alt_background.png" width="530" height="526"/>
         <image name="dialer_alt_default.png" width="128" height="125"/>
         <image name="dialer_alt_default_landscape.png" width="130" height="163"/>
         <image name="dialer_alt_disabled.png" width="209" height="136"/>
         <image name="dialer_alt_over.png" width="128" height="125"/>
-        <image name="dialer_alt_over_landscape.png" width="130" height="163"/>
-        <image name="hangup_default.png" width="60" height="60"/>
-        <image name="hangup_default_landscape.png" width="180" height="163"/>
-        <image name="hangup_over.png" width="60" height="60"/>
-        <image name="hangup_over_landscape.png" width="180" height="163"/>
+        <image name="hangup_default.png" width="374" height="151"/>
+        <image name="hangup_over.png" width="374" height="151"/>
         <image name="incall_background.png" width="320" height="88"/>
         <image name="micro_off_default.png" width="160" height="134"/>
         <image name="micro_off_default_landscape.png" width="130" height="163"/>
